<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:elevation="5dp"
        app:cardCornerRadius="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="150dp"
            android:layout_height="110dp">

            <ImageButton
                android:id="@+id/carRepairImage"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_centerVertical="true"
                android:layout_marginBottom="45dp"
                android:backgroundTint="#B3DDFA"
                android:clickable="false"
                android:contentDescription="@string/repair_image"
                android:src="@drawable/repair_icon_recycler"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/repairNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/reparacion"
                android:textColor="#000"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/carRepairImage" />

            <TextView
                android:id="@+id/repairIdItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/repairId"
                android:textColor="#000"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/repairNameText"
                app:layout_constraintTop_toBottomOf="@+id/carRepairImage" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="250dp"
            android:layout_height="110dp"
            android:layout_gravity="end"
            android:padding="10dp">


            <TextView
                android:id="@+id/clientCodeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clienteTextStyle"
                app:layout_constraintBottom_toTopOf="@+id/completionDateText"
                app:layout_constraintEnd_toStartOf="@+id/clientCodeItem"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/hoursWorkedText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/hoursWorkedItem"
                app:layout_constraintTop_toBottomOf="@+id/completionDateText"
                android:text="@string/hoursWorked"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="58dp" />

            <TextView
                android:id="@+id/completionDateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/fecha"
                android:textSize="11sp"
                app:layout_constraintBottom_toTopOf="@+id/hoursWorkedText"
                app:layout_constraintEnd_toStartOf="@+id/completionDateItem"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/clientCodeText" />

            <TextView
                android:id="@+id/hoursWorkedItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="21dp"
                android:text="@string/hours"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/constraintLayout"
                app:layout_constraintStart_toEndOf="@+id/hoursWorkedText"
                app:layout_constraintTop_toBottomOf="@+id/completionDateItem" />

            <TextView
                android:id="@+id/clientCodeItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="23dp"
                android:text="@string/code"
                app:layout_constraintBottom_toTopOf="@+id/completionDateItem"
                app:layout_constraintEnd_toStartOf="@+id/constraintLayout"
                app:layout_constraintStart_toEndOf="@+id/clientCodeText"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/completionDateItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="31dp"
                android:text="@string/date"
                android:textSize="11sp"
                app:layout_constraintBottom_toTopOf="@+id/hoursWorkedItem"
                app:layout_constraintEnd_toStartOf="@+id/constraintLayout"
                app:layout_constraintStart_toEndOf="@+id/completionDateText"
                app:layout_constraintTop_toBottomOf="@+id/clientCodeItem" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="101dp"
                android:layout_height="99dp"
                android:layout_marginStart="140dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.545">

                <TextView
                    android:id="@+id/sparePartsUsedText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#9AFE2E"
                    android:text="@string/repuestos_usados"
                    app:layout_constraintBottom_toTopOf="@+id/sparepartsUsedItem"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/sparepartsUsedItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/spareparts"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/sparePartsUsedText" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>